Add pages with extended main layout, empty sass and img

--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -1,13 +1,10 @@
 block variables
-
 doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
-    title #{title}
-
+    title Toxin
     block head
-
   body(class=pageClass)
     block content
       div(class='containerName')
