Add pages with extended main layout, empty sass and img

--- a/src/layout/main/main.sass
+++ b/src/layout/main/main.sass
@@ -4,6 +4,8 @@
 @import "../../pages/index/index"
 @import "src/pages/landing/landing"
 @import "src/blocks/menu/menu"
+html
+  box-sizing: border-box
 a
   text-decoration: none
 ul
