--- a/src/pages/ui/ui.pug
+++ b/src/pages/ui/ui.pug
@@ -1,5 +1,21 @@
 extends ../../layout/main/main
+include ../../blocks/button/button
 block variables
  - let pageClass = 'ui-page';
  - let containerName = 'ui-container'
 block content
+  div.button-stn-wrapp
+    +button({lineTitle: 'CLICK ME', mods: 'style1'})
+    +button({lineTitle: 'CLICK ME', mods: 'style1, opasity'})
+
+    div.rounded-corners-gradient-borders
+     +button({lineTitle: 'CLICK ME', mods: 'border'})
+    div.rounded-corners-gradient-borders.button_opasity
+     +button({lineTitle: 'CLICK ME', mods: 'border'})
+     //+button({lineTitle: 'CLICK ME', mods: 'border'})
+    //+button({lineTitle: 'CLICK ME', mods: 'style2'})
+  //div.button-long-wrapp
+   +button({lineTitle: 'CLICK ME', mods: 'border'})
+  // +button({lineTitle: 'CLICK ME', mods: 'long'})
+
+   
