--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,4 +1,5 @@
 extends ../../layout/main/main
+include ../../blocks/button/button
 include ../../blocks/menu/menu
 block variables
   - let pageClass = 'index-page';
