--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -1,38 +1,37 @@
 @font-face {
   font-family: "Montserrat-Regular";
-  src: url('/assets/fonts/Montserrat-Regular.eot');
-  src: url('/assets/fonts/Montserrat-Regular.eot?#iefix')
-      format('embedded-opentype'),
-    url('/assets/fonts/Montserrat-Regular.woff') format('woff'),
-    url('/assets/fonts/Montserrat-Regular.ttf') format('truetype'),
-    url('/assets/fonts/Montserrat-Regular.svg') format('svg');
+  src: url("/assets/fonts/Montserrat-Regular.eot");
+  src: url("/assets/fonts/Montserrat-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("/assets/fonts/Montserrat-Regular.woff") format("woff"),
+    url("/assets/fonts/Montserrat-Regular.ttf") format("truetype"),
+    url("/assets/fonts/Montserrat-Regular.svg") format("svg");
 }
 
 @font-face {
-  font-family: 'Montserrat-Bold';
-  src: url('/assets/fonts/Montserrat-Bold.eot');
-  src: url('/assets/fonts/Montserrat-Bold.eot?#iefix')
-      format('embedded-opentype'),
-    url('/assets/fonts/Montserrat-Bold.woff') format('woff'),
-    url('/assets/fonts/Montserrat-Bold.ttf') format('truetype'),
-    url('/assets/fonts/Montserrat-Bold.svg') format('svg');
-}
-
-@font-face {
-  font-family: 'Quicksand-Bold';
-  src: url('/assets/fonts/Quicksand-Bold.eot');
-  src: url('/assets/fonts/Quicksand-Bold.eot?#iefix')
-      format(''/embedded-opentype'),
-    url('/assets/fonts/Quicksand-Bold.woff') format('woff'),
-    url('/assets/fonts/Quicksand-Bold.ttf') format('truetype'),
-    url('/assets/fonts/Quicksand-Bold.svg') format('svg');
+  font-family: "Montserrat-Bold";
+  src: url("/assets/fonts/Montserrat-Bold.eot");
+  src: url("/assets/fonts/Montserrat-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("/assets/fonts/Montserrat-Bold.woff") format("woff"),
+    url("/assets/fonts/Montserrat-Bold.ttf") format("truetype"),
+    url("/assets/fonts/Montserrat-Bold.svg") format("svg");
 }
 @font-face {
-  font-family: 'Material Icons';
-  src: url('/assets/icons/MaterialIcons-Regular.eot');
-  src: url('/assets/icons/MaterialIcons-Regular.eot?#iefix')
-      format('embedded-opentype'),
-    url('/assets/icons/MaterialIcons-Regular.woff') format('woff'),
-    url('/assets/icons/MaterialIcons-Regular.ttf') format('truetype'),
-    url('/assets/icons/MaterialIcons-Regular.svg') format('svg');
+  font-family: "Quicksand-Bold";
+  src: url("/assets/fonts/Quicksand-Bold.eot");
+  src: url("/assets/fonts/Quicksand-Bold.eot?#iefix")
+      format("/embedded-opentype"),
+    url("/assets/fonts/Quicksand-Bold.woff") format("woff"),
+    url("/assets/fonts/Quicksand-Bold.ttf") format("truetype"),
+    url("/assets/fonts/Quicksand-Bold.svg") format("svg");
+}
+@font-face {
+  font-family: "Material Icons";
+  src: url("/assets/icons/MaterialIcons-Regular.eot");
+  src: url("/assets/icons/MaterialIcons-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("/assets/icons/MaterialIcons-Regular.woff") format("woff"),
+    url("/assets/icons/MaterialIcons-Regular.ttf") format("truetype"),
+    url("/assets/icons/MaterialIcons-Regular.svg") format("svg");
 }
