Add header to pages

--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -3,3 +3,4 @@ block variables
   - let pageClass = 'landing-page';
   - let containerName = 'landing-container'
 block content
+  include ../../blocks/headers/pages-header/pages-header
