--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -3,3 +3,4 @@ block variables
  - let pageClass = 'registration-page';
  - let containerName = 'registration-container'
 block content
+ include ../../blocks/headers/pages-header/pages-header
