--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -3,3 +3,4 @@ block variables
  - let pageClass = 'room-details-page';
  - let containerName = 'room-details-container'
 block content
+ include ../../blocks/headers/pages-header/pages-header
