--- a/src/pages/ui/ui.pug
+++ b/src/pages/ui/ui.pug
@@ -18,4 +18,7 @@ block content
    +button({lineTitle: 'CLICK ME', mods: 'border'})
   // +button({lineTitle: 'CLICK ME', mods: 'long'})
 
+   +menu('/mock-adress/change-me', '')
+
+
    
