--- a/src/pages/signin/signin.pug
+++ b/src/pages/signin/signin.pug
@@ -3,3 +3,4 @@ block variables
  - let pageClass = 'signin-page';
  - let containerName = 'signin-container'
 block content
+ include ../../blocks/headers/pages-header/pages-header
