--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,9 +1,25 @@
 .index-page {
   background-color: var(--color5);
 }
-
-.index-list-wraper {
+.index-nav {
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   width: 20%;
   box-shadow: var(--color5);
+}
+.index-nav-list {
+  display: flex;
+  flex-direction: column;
+}
+.index-nav-item {
+  padding: 1em;
+}
+.index-nav-link {
+  font-family: var(--second-font);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  color: var(--color1);
+  //padding: 3em;
 }
