--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -1,6 +1,8 @@
 extends ../../layout/main/main
 block variables
-  - let pageClass = 'landing-page';
+  // - let pageClass = 'landing-page';
   - let containerName = 'landing-container'
 block content
-  include ../../blocks/headers/pages-header/pages-header
+  div.landing-page
+    include ../../blocks/headers/pages-header/pages-header
+  //include ../../blocks/pages-footer/pages-footer
