Add overflow hidden

--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -1,16 +1,33 @@
 html {
   box-sizing: border-box;
   font-size: 1em;
+  overflow-x: hidden;
 }
 
 a {
   text-decoration: none;
 }
 
-ul {
+ul,
+li {
   list-style-type: none;
 }
 
 p {
   font-family: var(--first-font);
+}
+
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
