--- a/src/blocks/headers/pages-header/pages-header.scss
+++ b/src/blocks/headers/pages-header/pages-header.scss
@@ -1,47 +1,46 @@
 .pages-header-wrapper {
+  padding: 0.8125rem 0;
   width: 100%;
   background-color: var(--color8);
-  box-shadow: 0px 10px 20px rgba(var(--color-primary), var(--opasity-005));
-  padding: 0.8125rem 0;
+  box-shadow: 0 10px 20 rgba(var(--color-primary), var(--opasity-005));
 }
 
-.header-wrapper {
+.pages-header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   margin: 0 auto;
-  width: 84.8%;
+  width: 85.89%;
 }
 
 .pages-header-nav {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  width: 66.2%;
+  width: 66.3%;
 }
 
 .pages-header-nav-list {
-  width: 58.07%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background-color: red;
+  justify-content: space-between;
+  width: 58%;
 }
 
 .pages-header-nav-link {
-  font-family: var(--first-font);
-  font-style: normal;
-  font-weight: normal;
-  font-size: 0.875rem;
-  line-height: 1.0625rem;
   color: rgba(var(--color-primary), var(--opasity-05));
+  font-size: 0.875rem;
+  font-family: var(--first-font);
 }
+
 .pages-header-nav-item {
   display: flex;
   align-items: center;
 }
-.pages-header-button-wrapp {
+
+.pages-header-button {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 39.5%;
+  width: 39.54%;
 }
