Add font awesome

--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -35,3 +35,12 @@
     url("/assets/icons/MaterialIcons-Regular.ttf") format("truetype"),
     url("/assets/icons/MaterialIcons-Regular.svg") format("svg");
 }
+
+@font-face {
+  font-family: "Font Awsome";
+  src: url("/assets/fonts/fa-brands-400.eot");
+  src: url("/assets/fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),
+    url("/assets/fonts/fa-brands-400.woff") format("woff"),
+    url("/assets/fonts/fa-brands-400.ttf") format("truetype"),
+    url("/assets/fonts/fa-brands-400.svg") format("svg");
+}
