--- a/src/theme/vars.scss
+++ b/src/theme/vars.scss
@@ -5,18 +5,18 @@ html {
   --second-font: Montserrat-Bold;
   --third-font: Quicksand-Bold;
   --fifth-font: Material-Icon;
+  --six-font: Font Awsome;
   --color-primary: 31, 32, 65;
   --color6: #bc9cff;
-  //purple
   --color7: #6fcf97;
-  //green
   --color8: #fff;
   --opasity-075: 0.75;
   --opasity-05: 0.5;
   --opasity-025: 0.25;
   --opasity-005: 0.05;
+
   --text-base-size: 1em;
-  --text-scale-ratio: 1.33;
+  --text-scale-ratio: 1.1418;
   --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
   --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
   --text-md: calc(
@@ -27,42 +27,3 @@ html {
   --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
   --text-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
 }
-
-@mixin tablet {
-  @media only screen and (min-width: 480px) {
-    @content;
-  }
-}
-
-@mixin breakpoint($point) {
-  @if $point == papa-bear {
-    @media (max-width: 1600px) {
-      @content;
-    }
-  } @else if $point == mama-bear {
-    @media (max-width: 1250px) {
-      @content;
-    }
-  } @else if $point == baby-bear {
-    @media (max-width: 650px) {
-      @content;
-    }
-  }
-}
-//usage
-//@include tablet{
-//  .class-name{
-//
-//  }
-//}
-//--color1: #1f2041;
-//--color1: rgb(31, 32, 65);
-//dark shade 100%
-//--color2: rgba(31, 32, 65, 0.75);
-////dark shade75%;
-//--color3: rgba(31, 32, 65, 0.5);
-////dark shade50%
-//--color4: rgba(31, 32, 65, 0.25);
-////dark shade25%
-//--color5: rgba(31, 32, 65, 0.05);
-////dark shade5%
