--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,5 +1,7 @@
 .landing-page {
   background-image: url("/assets/img/landing1.jpg");
-  //width: 1440px;
-  //height: 900px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  //margin-bottom: 100px;
+  max-width: 100%;
 }
