--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -1,3 +1,5 @@
 .registration-page {
-  background-image: url("/assets/img/registration.jpg");
+  //background-image: url("/assets/img/registration.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
