--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -1,11 +1,12 @@
+@import "src/theme/mixins";
 .button {
-  //padding: 14px 21px 15px 19px;
   border-radius: 1.375rem;
   color: #fff;
   text-transform: uppercase;
-  font-size: var(--text-sm);
-  font-family: var(--second-font);
   font-weight: bold;
+  font-size: var(--text-xs);
+  font-family: var(--second-font);
+  line-height: 15px;
 
   &_style1 {
     background-color: var(--color6);
@@ -15,11 +16,8 @@
     background-color: var(--color8);
     color: var(--color6);
   }
-  &_size1 {
-    padding: 0.5625rem 1.1875rem 0.625rem 1.25rem;
-  }
-  //&_size1-long {
-  //  padding: 9px 19px 10px 20px;
+  //&_size1 {
+  //  padding: 0.5rem 1.1875rem 0.625rem 1.25rem;
   //}
 
   &_border {
@@ -37,30 +35,11 @@
     border: transparent;
     color: var(--color8);
   }
-
-  &_long {
-    padding: 0.875rem 1.25rem 0.9375rem 1.25rem;
-    width: 20rem;
-    background-color: #1f2041;
-  }
-  &_opasity {
-    opacity: 0.5;
-  }
-}
-.rounded-corners-gradient-borders {
-  width: 6.3125rem;
-  height: 2.75rem;
-  border: double 2px transparent;
-  border-radius: 1.375rem;
-  background-image: linear-gradient(white, white),
-    radial-gradient(circle at top left, #bc9cff, #8ba4f9);
-  background-origin: border-box;
-  background-clip: content-box, border-box;
 }
 
 .header-rounded-corners-gradient-borders {
   width: 5.3125rem;
-  height: 1.875rem;
+  height: 1.95rem;
   border: double 2px transparent;
   border-radius: 1.375rem;
   background-image: linear-gradient(white, white),
@@ -70,8 +49,8 @@
 }
 
 .header-rounded-corners-gradient-borders-big {
-  width: 12rem;
-  height: 1.875rem;
+  width: 12.05rem;
+  height: 1.95rem;
   border: double 2px transparent;
   border-radius: 1.375rem;
   background-image: linear-gradient(white, white),
