--- a/src/blocks/pages-footer/pages-footer.pug
+++ b/src/blocks/pages-footer/pages-footer.pug
@@ -1,51 +1,56 @@
 div.pages-footer-wrapper
- footer.footer-wrapper
+ footer.pages-footer
   div.footer-logo
-   a.pages-footer-logo(href="landing.html")
-    img.logo(src='assets/img/logo.svg')
-   p.footer-logotext.
-       Бронирование номеров в лучшем
-       отеле 2019 года по версии
-       ассоциации "Отельные взгляды"
+    a.pages-footer-logo(href="landing.html")
+     img.logo(src='assets/img/logo.svg')
+    p.footer-logotext.
+        Бронирование номеров в лучшем
+        отеле 2019 года по версии
+        ассоциации "Отельные взгляды"
   div.pages-footer-nav
-   ul.pages-footer-nav-list
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Навигация
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") О нас
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Новости
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Служба поддержки
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Услуги
-    li.pages-footer-nav-item
-
-   ul.pages-footer-nav-list
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") О нас
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") О сервисе
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Наша команда
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Вакансии
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Инвесторы
+   div.col1
+    ul.pages-footer-nav-list
+     li.pages-footer-nav-item
+      a.ui-footer-nav-link-first(href="/mock address/") навигация
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") о нас
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") новости
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") служба поддержки
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") услуги
+     li.pages-footer-nav-item
 
 
-   ul.pages-footer-nav-list
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Служба поддержки
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Соглашения
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Сообщения
-    li.pages-footer-nav-item
-     a.pages-footer-nav-link(href="/mock address/") Связь с нами
+    ul.pages-footer-nav-list
+     li.pages-footer-nav-item
+      a.ui-footer-nav-link-first(href="/mock address/") о нас
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") о сервисе
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") наша команда
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") вакансии
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") инвесторы
+
+
+    ul.pages-footer-nav-list
+     li.pages-footer-nav-item
+      a.ui-footer-nav-link-first(href="/mock address/") служба поддержки
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") соглашения
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") сообщения
+     li.pages-footer-nav-item
+      a.pages-footer-nav-link(href="/mock address/") связь с нами
 
   div.footer-subscribe
-    span Подписка
+    span.ui-footer--subs подписка
     p.
-      Получайте специальные
-      предложения и новости сервиса
+      получайте специальные предложения и новости сервиса
+    div.way_icon
+     i.fab.fa-twitter
+     i.fab.fa-facebook-f
+     i.fab.fa-instagram
