--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -1,7 +1,20 @@
+@import "../../theme/mixins";
 html {
   box-sizing: border-box;
-  font-size: 1em;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+html {
   overflow-x: hidden;
+  font-size: var(--text-base-size);
+  //@include fluid-type($min_width, $max_width, $min_font, $max_font);
+}
+body,
+html {
+  width: 100%;
 }
 
 a {
@@ -11,10 +24,6 @@ a {
 ul,
 li {
   list-style-type: none;
-}
-
-p {
-  font-family: var(--first-font);
 }
 
 ul {
