--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -10,9 +10,9 @@ html(lang='en')
 
   body(class=pageClass)
     include ../../blocks/headers/pages-header/pages-header
-
-  include ../../blocks/pages-footer/pages-footer
   block content
+  include ../pages-footer/pages-footer
+
 
 
 
