--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -11,13 +11,13 @@ block content
       li.index-nav-item
         a.index-nav-link(href="registration.html") Registration page
       li.index-nav-item
-        a.index-nav-link(href="room-details.html") Gallery
+        a.index-nav-link(href="room-details.html") Room details
+      li.index-nav-item
+        a.index-nav-link(href="galery.html") Gallery
       li.index-nav-item
         a.index-nav-link(href="signin.html") Singn in
       li.index-nav-item
         a.index-nav-link(href="ui.html") Ui Kit
-
-
 
 
 
