--- a/src/blocks/toggle/toggle.pug
+++ b/src/blocks/toggle/toggle.pug
@@ -1,5 +1,4 @@
-div#cover
- input#checkbox(type="checkbox")
- div#bar
- div#knob
 
+mixin toggle(label, checked=false)
+ label.toggle= label
+ input#s1.switch(type="checkbox" checked=checked)
