--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,4 +1,4 @@
-extends ../../layout/plain-main
+extends ../../layout/main/plain-main
 
 block variables
   - let pageClass = 'index-page';
@@ -18,6 +18,9 @@ block content
         a.index-nav-link(href="signin.html") Singn in
       li.index-nav-item
         a.index-nav-link(href="ui.html") Ui Kit
+      //include ../../blocks/dropdown/dropdown
+
+
 
 
 
