--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -1,5 +1,8 @@
 extends ../../layout/main/main
+include ../../blocks/input/input
 block variables
  - let pageClass = 'registration-page';
  - let containerName = 'registration-container'
 block content
+ include ../../layout/registration-form/registration-form
+
