--- a/src/pages/ui/ui.scss
+++ b/src/pages/ui/ui.scss
@@ -12,3 +12,7 @@
   border: 2px solid var(--color5);
   box-shadow: var(--color5);
 }
+.radio-container {
+  background-color: white;
+  width: 320px;
+}
