--- a/src/layout/pages-footer/pages-footer.pug
+++ b/src/layout/pages-footer/pages-footer.pug
@@ -1,9 +1,9 @@
-include ../../input/input
+include ../../blocks/input/input
 div.pages-footer-wrapper
  footer.pages-footer
   div.footer-logo
     a.pages-footer-logo(href="landing.html")
-     img.logo(src='assets/img/logo.svg')
+     img.logo(src='assets/images/logo.svg')
     p.footer-logotext.
         Бронирование номеров в лучшем
         отеле 2019 года по версии
