--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -1,5 +1,19 @@
 .registration-page {
-  //background-image: url("/assets/img/registration.jpg");
+  background-image: url("/assets/img/registration.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  //background-size: cover;
+}
+.form-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+  height: 546px;
+  margin: 30px auto 0 auto;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
