--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -1,5 +1,7 @@
 @font-face {
   font-family: "Montserrat-Regular";
+  font-weight: normal;
+  font-style: normal;
   src: url("/assets/fonts/Montserrat-Regular.eot");
   src: url("/assets/fonts/Montserrat-Regular.eot?#iefix")
       format("embedded-opentype"),
@@ -10,6 +12,7 @@
 
 @font-face {
   font-family: "Montserrat-Bold";
+  font-weight: bold;
   src: url("/assets/fonts/Montserrat-Bold.eot");
   src: url("/assets/fonts/Montserrat-Bold.eot?#iefix")
       format("embedded-opentype"),
