--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -18,6 +18,8 @@ block content
         a.index-nav-link(href="signin.html") Singn in
       li.index-nav-item
         a.index-nav-link(href="ui.html") Ui Kit
+      li.index-nav-item
+        a.index-nav-link(href="form-elements.html") Form Elements
       //include ../../blocks/dropdown/dropdown
 
 
