--- a/src/blocks/rate/rate.pug
+++ b/src/blocks/rate/rate.pug
@@ -1,6 +1,12 @@
-div.rate
- i.material-icons grade
- i.material-icons grade
- i.material-icons grade
- i.material-icons grade
- i.material-icons grade
+.star-rating
+ .star-rating__wrap
+  input#star-rating-5.star-rating__input(type='radio' name='rating' value='5')
+  label.star-rating__ico.fa.fa-star-o.fa-lg(for='star-rating-5' title='5 out of 5 stars')
+  input#star-rating-4.star-rating__input(type='radio' name='rating' value='4')
+  label.star-rating__ico.fa.fa-star-o.fa-lg(for='star-rating-4' title='4 out of 5 stars')
+  input#star-rating-3.star-rating__input(type='radio' name='rating' value='3')
+  label.star-rating__ico.fa.fa-star-o.fa-lg(for='star-rating-3' title='3 out of 5 stars')
+  input#star-rating-2.star-rating__input(type='radio' name='rating' value='2')
+  label.star-rating__ico.fa.fa-star-o.fa-lg(for='star-rating-2' title='2 out of 5 stars')
+  input#star-rating-1.star-rating__input(type='radio' name='rating' value='1')
+  label.star-rating__ico.fa.fa-star-o.fa-lg(for='star-rating-1' title='1 out of 5 stars')
