--- a/src/blocks/rate/rate.scss
+++ b/src/blocks/rate/rate.scss
@@ -1,6 +1,40 @@
-.rate {
+.star-rating {
+  font-size: 0;
+}
+.star-rating__wrap {
   display: flex;
-  padding: 0 0 0 1em;
-  width: 140px;
-  //background-color: #8ba4f9;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  width: 120px;
+}
+.star-rating__wrap:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.star-rating__ico {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #bc9cff;
+}
+.star-rating__ico:last-child {
+  padding-left: 0;
+}
+.star-rating__input {
+  display: none;
+}
+.star-rating__ico:hover:before,
+.star-rating__ico:hover ~ .star-rating__ico:before,
+.star-rating__input:checked ~ .star-rating__ico:before {
+  content: "\f005";
+}
+.rate-button {
+  display: flex;
+  justify-content: space-between;
+  width: 118px;
 }
