--- a/src/blocks/toggle/toggle.pug
+++ b/src/blocks/toggle/toggle.pug
@@ -1,4 +1,4 @@
-
 mixin toggle(label, checked=false)
- label.toggle= label
- input#s1.switch(type="checkbox" checked=checked)
+ .toggle-w
+  input.toggle.switch(type="checkbox" checked=checked)
+  label.toggle_lable= label
