--- a/src/layout/main/plain-main.pug
+++ b/src/layout/main/plain-main.pug
@@ -6,6 +6,7 @@ html(lang='en')
   meta(charset='utf-8')
   meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
   meta(http-equiv="X-UA-Compatible", content="ie=edge")
+  link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
   title Toxin
   block head
 
