--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -67,3 +67,22 @@ label {
 
   color: rgba(31, 32, 65, 0.75);
 }
+.text-field-right-title {
+  font-family: Montserrat-Regular;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: right;
+  text-transform: uppercase;
+  color: rgba(31, 32, 65, 0.5);
+}
+.text-field-left-title {
+  font-family: Montserrat-Bold;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #1f2041;
+}
