--- a/src/blocks/like-button/like-button.pug
+++ b/src/blocks/like-button/like-button.pug
@@ -1,4 +1,4 @@
 mixin like-button(num)
   button.like-button.like__btn.animated(type='button')
     i.heart-icon.fa.fa-heart
-    span.like__number= num
+    span.like__number= num.num
