--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -86,3 +86,12 @@ label {
   text-transform: uppercase;
   color: #1f2041;
 }
+
+section {
+  font-family: Montserrat-Regular;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(31, 32, 65, 0.75);
+}
