--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -21,7 +21,7 @@ mixin icon-info(info)
 mixin comment-info(info)
  .icon-info
   div.icon-info-left
-   img(src=(`assets/img/${info.image}`), alt="apartment photo")
+   img.commet-info-img(src=(`assets/img/${info.image}`), width="48px" height="48px" alt="apartment photo")
   div.icon-info_right
    div.info_number= info.tophead
    div.info_bottom-text= info.bottomtext
