--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -1,5 +1,7 @@
 extends ../../layout/main/main
 include ../../blocks/info/info
+include ../../layout/comment/comment
+
 block variables
  - let pageClass = 'room-details-page';
  - let containerName = 'room-details-container'
@@ -15,12 +17,24 @@ block content
      each item in [{righthead: 'mood', tophead:'Комфорт',bottomtext:'Шумопоглощающие стены'},{righthead: 'domain', tophead:'Удобство',bottomhead:'Окно в каждой спальне'},{righthead: 'whatshot', tophead:'Уют',bottomhead:'Номер оснащен камином'},]
        +icon-info( item )
 
-     div.comments
-      h3 Отзывы посетителей номера
-      each item in [{image:'image.jpg',tophead:'Мурад Сарафанов',bottomtext:'5 дней назад'},{image:'image 4.jpg',tophead:'Патрисия Стеклышкова',bottomtext:'Неделю назад'},]
-       +comment-info( item )
-     include ../../blocks/like-button/like-button
+   .comment-section-wrapper
+    h2 Отзывы посетителей номера
+    +comment({
+      image: 'cadr.png',
+      tophead: 'Мурад Сарафанов',
+      bottomtext: '5 дней назад',
+      text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.',
+      num: '12'
+    })
 
+
+    +comment({
+      image: 'image 4.jpg',
+      tophead: 'Патрисия Стеклышкова',
+      bottomtext: 'Неделю назад',
+      text: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент',
+      num: '3'
+    })
 
 
 
